Fix pantry button cutoff on hove

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -1,6 +1,5 @@
-header {
+.header {
   display: flex;
-  flex-direction: row;
   grid-area: header;
   min-height: 90px;
   padding: 0% 0%;
@@ -8,7 +7,7 @@ header {
   width: 100%;
 }
 
-span {
+.header--brand-name {
   color: #C4EB67;
   font-weight: 400;
 }
@@ -23,23 +22,22 @@ span {
   border-radius: 15px 15px 15px 15px;
   border: 3px outset #C4EB67;
   box-shadow: 0px 0px 7px 0px #475d74;
-  display: flex;
-  flex-direction: row;
-  font-family: "Quicksand", sans-serif;
-  justify-content: center;
   margin: 1.2% 0.5% 1.2% 0%;
   width: 100%;
+  font-family: "Quicksand", sans-serif;
+  display: flex;
+  justify-content: center;
+ 
 }
 
-#search-input {
+.search-input {
   background-color: #b6dcca;
   background: -webkit-gradient( linear,left top, left bottom, color-stop(0, rgb(255, 255, 255)), color-stop(1, rgb(225,225,225)));
   border-radius: 10px 0px 0px 10px;
   border: none;
   box-shadow: inset -3px -1px 20px 1px #5c7894;
   color: #5B7894;
-  font-family: "Quicksand", sans-serif;
-  font-size: 42px;
+  font-size: 2rem;
   height: 100%;
   outline: none;
   padding: 0% 2% 0% 0%;
@@ -56,14 +54,14 @@ span {
     box-shadow: inset 0px 0px 0px 0px white;
 
     &::placeholder {
-      font-size: 0px;
+      font-size: 0rem;
       transition: .8s ease;
     }
   }
 
   &::placeholder {
     color: #5B7894;
-    font-size: 20px;
+    font-size: 1.5rem;
     text-align: right;
     text-shadow: none;
   }
@@ -98,14 +96,13 @@ span {
   justify-content: center;
   margin: 0%;
   outline: none;
-  overflow: hidden;
   text-align: center;
   transition: .4s ease;
   width: 15%;
 
   &:hover {
     color: #C4EB67;
-    font-size: 14px;
+    font-size: .85rem;
     text-shadow: 0px 2px 4px black;
     transition: .4s ease;
   }
